# transform

./: .gitattributes  .gitignore  GDC_file_endpoint_mapping.yml  GDC_file_endpt_mapping.yml  GDC_mapping.yml  GDC_subject_endpoint_mapping.yml  IDC_mapping.yml  PDC_file_endpoint_mapping.yml  PDC_mapping.yml  PDC_subject_endpoint_mapping.yml  README.md  ccdh_map.json  data_explorer.ipynb  docker-compose-airflow.yaml  docker-compose.yaml  dockerfile  file_endpoint_merge.yml  flow.puml  gdc-transform.yml  gdc_case_fields.txt  localtest.sh  merge.yml  missing_descriptions.json  pdc-transform.yml  pyproject.toml  requirements.txt  setup.py  subject_endpoint_merge.yml  subjects_schema.json  upload_dags.sh
python_package/: README.md  pyproject.toml  setup.cfg  zz00_build  zz01_install_somewhere
python_package/src/cda_etl/: lib.py
python_package/src/cda_etl/auxiliary_scripts/: 000_list_GDC_entities_by_program_and_project.py  001_enumerate_GDC_program_project_hierarchy.py  010_rewire_and_fix_GDC_subsample_provenance.py  100_list_PDC_entities_by_program_project_and_study.py  101_count_distinct_values_by_table_and_column.all_extracted_GDC_data.py  101_enumerate_PDC_program_project_study_hierarchy.py  102_count_distinct_values_by_table_and_column.GDC_CDA_data.py  103_summarize_GDC_entities_by_program_name_and_project_submitter_id.py  104_enumerate_gdc_program_project_hierarchy.py  106_tabulate_enumerable_values_by_table_and_column.all_extracted_GDC_data.py  110_draft_PDC_GDC_project_links_using_submitter_IDs.pl  111_match_PDC_subjects_to_GDC_subjects.py  200_get_SOPClassUID_tsv.pl  (+76 more)
(+749 files in other folders)
