[metadata]
name = cda_etl
version = 1.0.51
description = NCI CRDC CDA ETL
author = Arthur Brady
author_email = arthur.brady@gdit.com
url = https://github.com/CancerDataAggregator/transform
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
install_requires = 
    pg8000
    cloud-sql-python-connector[pg8000]
    google-cloud-bigquery
    google-cloud-storage
    jsonlines >=3.1.0
    requests >=2.28.1
packages=find:
package_dir=
    =src

[options.package_data]
* = *.pl, *.url, *.bash, *.schema.json

[options.packages.find]
where=src


